<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balanceTextLabel"
        android:layout_marginTop="61dp"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balanceSpinner"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/addressInput"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterAddress"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/balanceTextLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseAddress"
        android:id="@+id/textView7"
        android:textSize="20sp"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:id="@+id/textView8"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/saveAddressButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:id="@+id/loadAddressButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveAddress"
        android:id="@+id/saveAddressButton"
        android:layout_below="@+id/addressInput"
        android:layout_centerHorizontal="true" />

</RelativeLayout>