<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/balanceTextLabel"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Balance "
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterAddress"
        android:id="@+id/textView9"
        android:textSize="20sp"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/balanceTextLabel"
        android:layout_toStartOf="@+id/textView10" />

    <EditText
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:id="@+id/addressInput"
        android:textAlignment="center"
        android:layout_marginLeft="10sp"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveAddress"
        android:id="@+id/saveAddressButton"
        android:layout_below="@+id/textView9"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:id="@+id/textView10"
        android:textSize="30sp"
        android:layout_below="@+id/saveAddressButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseAddress"
        android:id="@+id/textView11"
        android:textSize="20sp"
        android:layout_below="@+id/textView10"
        android:layout_alignEnd="@+id/textView9"
        android:layout_marginTop="30sp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/balanceSpinner"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/addressInput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:id="@+id/loadAddressButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>